--- a/data/scrape.ipynb
+++ b/data/scrape.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dotenv import load_dotenv"
+    "from dotenv import load_dotenv\n",
+    "import os"
    ]
   },
   {
@@ -31,15 +32,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "\n",
-    "Binance_API_key = os.getenv(\"KEY_1\")\n",
-    "\n",
-    "Binance_SECRET_key = os.getenv(\"KEY_2\")\n"
+    "# API keys \n",
+    "# example: Binance_API_key = os.getenv(\"KEY_1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# API URL \n",
+    "# example: Binance_URL = \"https://api.binance.com/api/v3\""
    ]
   },
   {
