--- a/notebooks/data_collection.ipynb
+++ b/notebooks/data_collection.ipynb
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,6 +239,128 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 1.2. S&P 500\n",
+    "The observations for the S&P 500 represent the daily index value at market close. The market typically closes at 4 PM ET, except for holidays when it sometimes closes early.\n",
+    "\n",
+    "The Federal Reserve Bank of St. Louis and S&P Dow Jones Indices LLC have reached a new agreement on the use of Standard & Poors and Dow Jones Averages series in FRED. FRED and its associated services will include 10 years of daily history for Standard & Poors and Dow Jones Averages series.\n",
+    "\n",
+    "The S&P 500 is regarded as a gauge of the large cap U.S. equities market. The index includes 500 leading companies in leading industries of the U.S. economy, which are publicly held on either the NYSE or NASDAQ, and covers 75% of U.S. equities. Since this is a price index and not a total return index, the S&P 500 index here does not contain dividends. \n",
+    "\n",
+    "**Citation**:\n",
+    "\n",
+    "S&P Dow Jones Indices LLC, S&P 500 [SP500], retrieved from FRED, Federal Reserve Bank of St. Louis; https://fred.stlouisfed.org/series/SP500, March 27, 2025. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data saved to data/raw/sp500.csv\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>realtime_start</th>\n",
+       "      <th>realtime_end</th>\n",
+       "      <th>date</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2025-03-27</td>\n",
+       "      <td>2025-03-27</td>\n",
+       "      <td>2022-03-24</td>\n",
+       "      <td>4520.16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2025-03-27</td>\n",
+       "      <td>2025-03-27</td>\n",
+       "      <td>2022-03-25</td>\n",
+       "      <td>4543.06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2025-03-27</td>\n",
+       "      <td>2025-03-27</td>\n",
+       "      <td>2022-03-28</td>\n",
+       "      <td>4575.52</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2025-03-27</td>\n",
+       "      <td>2025-03-27</td>\n",
+       "      <td>2022-03-29</td>\n",
+       "      <td>4631.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2025-03-27</td>\n",
+       "      <td>2025-03-27</td>\n",
+       "      <td>2022-03-30</td>\n",
+       "      <td>4602.45</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  realtime_start realtime_end       date    value\n",
+       "0     2025-03-27   2025-03-27 2022-03-24  4520.16\n",
+       "1     2025-03-27   2025-03-27 2022-03-25  4543.06\n",
+       "2     2025-03-27   2025-03-27 2022-03-28  4575.52\n",
+       "3     2025-03-27   2025-03-27 2022-03-29  4631.60\n",
+       "4     2025-03-27   2025-03-27 2022-03-30  4602.45"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output_file = \"data/raw/sp500.csv\"\n",
+    "\n",
+    "df_sp500 = fetch_data_from_fred(\n",
+    "    series_id=\"SP500\",\n",
+    "    start_date=\"2022-03-24\",\n",
+    "    end_date=\"2025-03-24\",\n",
+    "    output_filename=output_file\n",
+    ")\n",
+    "\n",
+    "df_sp500.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 2. CoinGecko Data\n",
     "CoinGecko is a leading independent cryptocurrency data aggregator that provides comprehensive information on over 17,000 crypto assets and 1,200+ exchanges.\n",
     "- For the data we are scraping, we do **not** need any API key."
@@ -246,57 +368,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fetching top 100 cryptocurrency assets by market cap...\n",
-      "Found 100 assets\n",
-      "[1/100] Fetching daily data for bitcoin...\n",
+      "Fetching top 2 cryptocurrency assets by market cap...\n",
+      "Found 2 assets\n",
+      "[1/2] Fetching daily data for bitcoin...\n",
       "✅ Successfully fetched 366 days of data for bitcoin\n",
       "Waiting 6 seconds to avoid API rate limits...\n",
-      "[2/100] Fetching daily data for ethereum...\n",
+      "[2/2] Fetching daily data for ethereum...\n",
       "✅ Successfully fetched 366 days of data for ethereum\n",
       "Waiting 3 seconds to avoid API rate limits...\n",
-      "[3/100] Fetching daily data for tether...\n",
-      "✅ Successfully fetched 366 days of data for tether\n",
-      "Waiting 3 seconds to avoid API rate limits...\n",
-      "[4/100] Fetching daily data for ripple...\n",
-      "✅ Successfully fetched 366 days of data for ripple\n",
-      "Waiting 3 seconds to avoid API rate limits...\n",
-      "[5/100] Fetching daily data for binancecoin...\n",
-      "✅ Successfully fetched 366 days of data for binancecoin\n",
-      "Waiting 3 seconds to avoid API rate limits...\n",
-      "[6/100] Fetching daily data for solana...\n",
-      "✅ Successfully fetched 366 days of data for solana\n",
-      "Waiting 3 seconds to avoid API rate limits...\n",
-      "[7/100] Fetching daily data for usd-coin...\n",
-      "✅ Successfully fetched 366 days of data for usd-coin\n",
-      "Waiting 3 seconds to avoid API rate limits...\n",
-      "[8/100] Fetching daily data for dogecoin...\n",
-      "Error fetching dogecoin data: 429 Client Error: Too Many Requests for url: https://api.coingecko.com/api/v3/coins/dogecoin/market_chart?vs_currency=usd&days=365&interval=daily\n",
-      "Rate limit exceeded. Retrying in 60 seconds... (Attempt 1/5)\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mHTTPError\u001b[0m                                 Traceback (most recent call last)",
-      "File \u001b[1;32mc:\\Users\\Ryan Lee\\Desktop\\50.038 Computational Data Science\\Digital-Asset-Prediction\\src\\data_collection\\data_scraper.py:143\u001b[0m, in \u001b[0;36mget_daily_market_data_of_asset_from_coingecko\u001b[1;34m(asset_id, vs_currency, days, output_file, max_retries, retry_wait_time)\u001b[0m\n\u001b[0;32m    142\u001b[0m response \u001b[38;5;241m=\u001b[39m requests\u001b[38;5;241m.\u001b[39mget(url, params\u001b[38;5;241m=\u001b[39mparams, timeout\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10\u001b[39m)\n\u001b[1;32m--> 143\u001b[0m \u001b[43mresponse\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mraise_for_status\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# Raise an error for non-2xx status codes\u001b[39;00m\n\u001b[0;32m    145\u001b[0m data \u001b[38;5;241m=\u001b[39m response\u001b[38;5;241m.\u001b[39mjson()\n",
-      "File \u001b[1;32mc:\\Users\\Ryan Lee\\.conda\\envs\\term6\\Lib\\site-packages\\requests\\models.py:1024\u001b[0m, in \u001b[0;36mResponse.raise_for_status\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   1023\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m http_error_msg:\n\u001b[1;32m-> 1024\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m HTTPError(http_error_msg, response\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m)\n",
-      "\u001b[1;31mHTTPError\u001b[0m: 429 Client Error: Too Many Requests for url: https://api.coingecko.com/api/v3/coins/dogecoin/market_chart?vs_currency=usd&days=365&interval=daily",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[8], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msrc\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdata_collection\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdata_scraper\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m fetch_top_crypto_data_from_coingecko\n\u001b[1;32m----> 3\u001b[0m df_top_crypto_data \u001b[38;5;241m=\u001b[39m \u001b[43mfetch_top_crypto_data_from_coingecko\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m      4\u001b[0m \u001b[43m    \u001b[49m\u001b[43mlimit\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m100\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      5\u001b[0m \u001b[43m    \u001b[49m\u001b[43mvs_currency\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43musd\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      6\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdays\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m365\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      7\u001b[0m \u001b[43m    \u001b[49m\u001b[43moutput_filename\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mdata/raw/top_crypto_daily_data.csv\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\n\u001b[0;32m      8\u001b[0m \u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\Ryan Lee\\Desktop\\50.038 Computational Data Science\\Digital-Asset-Prediction\\src\\data_collection\\data_scraper.py:230\u001b[0m, in \u001b[0;36mfetch_top_crypto_data_from_coingecko\u001b[1;34m(limit, vs_currency, days, output_filename)\u001b[0m\n\u001b[0;32m    228\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m    229\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m[\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mi\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(top_assets)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m] Fetching daily data for \u001b[39m\u001b[38;5;132;01m{\u001b[39;00masset_id\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m--> 230\u001b[0m     df \u001b[38;5;241m=\u001b[39m \u001b[43mget_daily_market_data_of_asset_from_coingecko\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m    231\u001b[0m \u001b[43m        \u001b[49m\u001b[43masset_id\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43masset_id\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[0;32m    232\u001b[0m \u001b[43m        \u001b[49m\u001b[43mvs_currency\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mvs_currency\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    233\u001b[0m \u001b[43m        \u001b[49m\u001b[43mdays\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdays\u001b[49m\n\u001b[0;32m    234\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    235\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m df \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    236\u001b[0m         df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124masset\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m asset_id  \u001b[38;5;66;03m# Add asset ID as a feature directly in the fetched data\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\Ryan Lee\\Desktop\\50.038 Computational Data Science\\Digital-Asset-Prediction\\src\\data_collection\\data_scraper.py:191\u001b[0m, in \u001b[0;36mget_daily_market_data_of_asset_from_coingecko\u001b[1;34m(asset_id, vs_currency, days, output_file, max_retries, retry_wait_time)\u001b[0m\n\u001b[0;32m    189\u001b[0m     retry_count \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m    190\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRate limit exceeded. Retrying in \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mretry_wait_time\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m seconds... (Attempt \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mretry_count\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmax_retries\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m)\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m--> 191\u001b[0m     \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[43mretry_wait_time\u001b[49m\u001b[43m)\u001b[49m  \u001b[38;5;66;03m# Wait 60 seconds before retrying\u001b[39;00m\n\u001b[0;32m    192\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    193\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "\n",
+      "Combining data from all assets...\n",
+      "\n",
+      "✅ Daily data collection complete! Data saved as 'data/raw/top_crypto_daily_data.csv'.\n",
+      "\n",
+      "Summary:\n",
+      "- Successfully collected data for 2 cryptocurrencies\n",
+      "- Total records: 732\n",
+      "- Date range: 2024-03-28 to 2025-03-27\n"
      ]
     }
    ],
@@ -304,7 +399,7 @@
     "from src.data_collection.data_scraper import fetch_top_crypto_data_from_coingecko\n",
     "\n",
     "df_top_crypto_data = fetch_top_crypto_data_from_coingecko(\n",
-    "    limit=100,\n",
+    "    limit=2,\n",
     "    vs_currency=\"usd\",\n",
     "    days=365,\n",
     "    output_filename=\"data/raw/top_crypto_daily_data.csv\"\n",
