--- a/notebooks/old/combining.ipynb
+++ b/notebooks/old/combining.ipynb
@@ -132,10 +132,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_gold = pd.read_csv('Gold_price_averages_monthly.csv')"
+   ]
   },
   {
    "cell_type": "code",
