--- a/notebooks/data_processing.ipynb
+++ b/notebooks/data_processing.ipynb
@@ -1083,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1099,7 +1099,10 @@
     "gold_prefilled = gold_prefilled.sort_index()\n",
     "\n",
     "# Reindex to OHLC dates and forward-fill (now includes pre-start value)\n",
-    "gold_filled = gold_prefilled.reindex(ohlc.index, method=\"ffill\")"
+    "gold_filled = gold_prefilled.reindex(ohlc.index, method=\"ffill\")\n",
+    "\n",
+    "# TODO: linear fill for smoother transition (but not so straight forward due to reindexing)\n",
+    "# gold_daily = gold.resample(\"D\").interpolate(method=\"linear\")"
    ]
   },
   {
