--- a/notebooks/model_trial.ipynb
+++ b/notebooks/model_trial.ipynb
@@ -152,7 +152,7 @@
     "\n",
     "# Initialize and train model\n",
     "input_dim = len(features)\n",
-    "model = transformer(input_dim, hidden_dim=64, output_dim=1)\n",
+    "model = transfomer(input_dim, hidden_dim=64, output_dim=1)\n",
     "train_model(model, dataloader)\n"
    ]
   },
