adding predictions file

--- a/notebooks/old/model_trial.ipynb
+++ b/notebooks/old/model_trial.ipynb
@@ -141,7 +141,7 @@
    ],
    "source": [
     "df = load_data(data_file_path)\n",
-    "df['symbol'] = df['symbol'].astype('category').cat.codes\n",
+    "df['symbol'] = df['symbol'].astype('category').cat.codesv\n",
     "\n",
     "\n",
     "# Normalize and prepare dataset\n",
