--- a/notebooks/predictions.ipynb
+++ b/notebooks/predictions.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "import pandas \n",
-    "import numpy "
+    "import numpy \n",
+    "import pickle"
    ]
   },
   {
@@ -16,8 +17,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    " "
+    "model_path = \"\"\n",
+    "with open(model_path, 'rb') as file:\n",
+    "    model = pickle.load(file)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
