--- a/notebooks/predictions.ipynb
+++ b/notebooks/predictions.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas\n",
+    "import pandas as pd\n",
     "from torchsummary import summary\n",
     "import random\n",
     "import sys \n",
@@ -19,16 +19,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/Users/aishwaryaiyer'"
+       "'/Users/aishwaryaiyer/Documents'"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,17 +48,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "from src.models import *\n",
+    "from src.dataset import *\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,16 +79,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/vr/qwxtvrr17fn2qzlm0z4rq4br0000gn/T/ipykernel_70435/2746541776.py:1: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "/var/folders/vr/qwxtvrr17fn2qzlm0z4rq4br0000gn/T/ipykernel_72818/2746541776.py:1: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  transformer_model.load_state_dict(torch.load(transformer_model_path, map_location=torch.device('cpu')))\n",
-      "/var/folders/vr/qwxtvrr17fn2qzlm0z4rq4br0000gn/T/ipykernel_70435/2746541776.py:2: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "/var/folders/vr/qwxtvrr17fn2qzlm0z4rq4br0000gn/T/ipykernel_72818/2746541776.py:2: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
       "  informer_model.load_state_dict(torch.load(informer_model_path, map_location=torch.device('cpu')))\n"
      ]
     },
@@ -129,7 +130,7 @@
        ")"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,38 +145,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Selected ticker: ALGO/USDT\n"
-     ]
-    }
-   ],
-   "source": [
-    "CSV_PATH = \"/Users/aishwaryaiyer/Documents/GitHub/Digital-Asset-Prediction/data/processed/combined_dataset_v1.csv\"\n",
-    "df = pd.read_csv(CSV_PATH, parse_dates=['date'])\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "df.sort_values(['symbol', 'date'], inplace=True)\n",
-    "\n",
-    "# 1. Select a random crypto ticker\n",
-    "all_tickers = df['symbol'].unique()\n",
-    "random_ticker = np.random.choice(all_tickers)\n",
-    "print(f\"Selected ticker: {random_ticker}\")\n",
-    "\n",
-    "# 2. Get the most recent 14 days of data for this ticker\n",
-    "ticker_data = df[df['symbol'] == random_ticker].tail(14)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,6 +201,7 @@
     "    \n",
     "    with torch.no_grad():\n",
     "        input_seq = seq.unsqueeze(0)\n",
+    "        normalizer = Normalizer()\n",
     "        normalizer.fit(input_seq)\n",
     "        pred = model(input_seq)\n",
     "        \n",
@@ -232,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -245,28 +223,28 @@
       "Summary Statistics:\n",
       "       Transformer_Error_Pct  Informer_Error_Pct\n",
       "count           2.000000e+01        2.000000e+01\n",
-      "mean            1.077036e+06        3.336484e+06\n",
-      "std             4.451610e+06        1.372156e+07\n",
-      "min             8.383273e+01        1.696007e+02\n",
-      "25%             1.185869e+03        7.304357e+03\n",
-      "50%             3.993379e+03        1.587803e+04\n",
-      "75%             1.408060e+04        5.451039e+04\n",
-      "max             1.996359e+07        6.154303e+07\n",
+      "mean            1.867799e+05        5.945227e+05\n",
+      "std             3.892810e+05        1.223386e+06\n",
+      "min             8.485883e+01        2.748114e+01\n",
+      "25%             1.662873e+03        6.092868e+03\n",
+      "50%             5.174402e+03        1.754093e+04\n",
+      "75%             1.162963e+05        3.780090e+05\n",
+      "max             1.481523e+06        4.571896e+06\n",
       "\n",
       "Sample Predictions:\n",
       "      Ticker  Last_Close  Transformer_Pred  Informer_Pred  Transformer_Diff  \\\n",
-      "0   WIN/USDT    0.000061        -12.169744      37.516693         12.169805   \n",
-      "1  MANA/USDT    0.279600        -11.053042      40.352673         11.332642   \n",
-      "2   XLM/USDT    0.290700        -11.144263      40.420639         11.434963   \n",
-      "3   ONG/USDT    0.224900        -11.470650      39.937958         11.695550   \n",
-      "4   JST/USDT    0.030890        -12.129482      39.695839         12.160372   \n",
+      "0   STX/USDT    0.685000        -10.865082      42.866081         11.550082   \n",
+      "1  DOGE/USDT    0.183000        -11.994514      40.923820         12.177514   \n",
+      "2  TROY/USDT    0.001277        -12.171100      39.731094         12.172377   \n",
+      "3   FUN/USDT    0.002370        -12.172416      39.173653         12.174786   \n",
+      "4  DUSK/USDT    0.096300        -12.075022      39.541847         12.171322   \n",
       "\n",
       "   Informer_Diff  Transformer_Error_Pct  Informer_Error_Pct  \n",
-      "0      37.516632           1.996359e+07        6.154303e+07  \n",
-      "1      40.073073           4.053163e+03        1.433229e+04  \n",
-      "2      40.129939           3.933596e+03        1.380459e+04  \n",
-      "3      39.713058           5.200333e+03        1.765810e+04  \n",
-      "4      39.664949           3.936670e+04        1.284071e+05  \n"
+      "0      42.181081            1686.143327        6.157822e+03  \n",
+      "1      40.740820            6654.379489        2.226274e+04  \n",
+      "2      39.729817          953200.991604        3.111184e+06  \n",
+      "3      39.171283          513704.039381        1.652797e+06  \n",
+      "4      39.445547           12638.963389        4.096111e+04  \n"
      ]
     }
    ],
@@ -293,7 +271,6 @@
     "        \n",
     "    last_close = ticker_data['close'].iloc[-1]\n",
     "    \n",
-    "    # Get predictions\n",
     "    transformer_pred = predict_ticker(ticker_data, transformer_model, \"Transformer\")\n",
     "    informer_pred = predict_ticker(ticker_data, informer_model, \"Informer\")\n",
     "    \n",
@@ -326,56 +303,6 @@
     "# Display first few results\n",
     "print(\"\\nSample Predictions:\")\n",
     "print(results.head())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Normalizer statistics:\n",
-      "Means: 3010698.5\n",
-      "Stddevs: 9415004.0\n",
-      "\n",
-      "Input scaling check - should be ~N(0,1):\n",
-      "Mean: -0.32, Std: 0.00\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Check normalization stats\n",
-    "print(\"\\nNormalizer statistics:\")\n",
-    "print(f\"Means: {normalizer.mean}\")\n",
-    "print(f\"Stddevs: {normalizer.std}\")\n",
-    "\n",
-    "# Check if predictions are normalized\n",
-    "sample_input = torch.randn(1, 14, len(features))\n",
-    "normalized = normalizer(sample_input)\n",
-    "print(f\"\\nInput scaling check - should be ~N(0,1):\")\n",
-    "print(f\"Mean: {normalized.mean().item():.2f}, Std: {normalized.std().item():.2f}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([14, 11])\n"
-     ]
-    }
-   ],
-   "source": [
-    "x, _ = dataset[0]\n",
-    "print(x.shape)  # should be (sequence_length, num_features)\n"
    ]
   }
  ],
